Tweaked resume phrasing.

--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -107,7 +107,7 @@ employers:
       - title: Functional Game Tester
         start: November 2011
         end: August 2013
-        description: Graduated from hardware testing to testing software submitted for approval and release on the Xbox 360.
+        description: Lateral promotion to testing specific software submitted for approval and release on the Xbox 360.
       - title: Hardware Game Tester
         start: March 2011
         end: November 2011
