Modified resume occupation.

--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -1,6 +1,6 @@
 first_name: Kyle
 last_name: Fiegener
-occupation: Web Developer
+occupation: Full-Stack Web Developer
 contacts:
   left:
     - text: KyleFiegener@gmail.com
