--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -21,7 +21,7 @@ contacts:
       icon: map-marker
     # - text: (253) 555-5555
     #   icon: phone
-summary: Web developer who enjoys the merging of art and science that comes with full-stack development.
+summary: "Web developer who's been playing with all things computer science since the age of 12, and enjoys the merging of art and science that comes with full-stack web development."
 skill_groups:
   - name: Web Development
     subgroups:
