Web resume now has link to pdf version.

--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -126,3 +126,4 @@ education:
     detail: Computer Science
   - institution: Green River Community College
     detail: A.S. Computer Science 2004
+pdf_url: "/files/Kyle-Fiegener_resume.pdf"
