Birthday list fix

--- a/_data/gifts.yml
+++ b/_data/gifts.yml
@@ -9,7 +9,7 @@ current:
     note:
       text: Only 2 left in stock!
       icon: exclamation-circle
-  - name: The Last of Us: American Dreams
+  - name: "The Last of Us: American Dreams"
     link: "https://www.amazon.com/Last-Us-American-Dreams/dp/1616552123"
     description: Graphic novel.
     price: $11.71
